<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCamera"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/tvBiometric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvBiometric"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLocation"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvAlmacenamientoInterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAlmacenamientoInterno"
        android:textSize="25dp" />


    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvInternet"
        android:textSize="25dp" />


    <Button
        android:id="@+id/btnCheckPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCheck" />

    <Button
        android:id="@+id/btnRequestPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="solicitarPermisos"
        android:text="@string/btnRequest" />

</LinearLayout>